tech: Use GlobalExceptionHandler for clearing code